--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,9 +6,22 @@
   --font-lora: 'Lora', serif;
   --color-accent: rgb(158, 96, 251);
   --color-primary: rgb(36, 29, 48);
-
+  --color-dark-red: #f25a5a;
+  --color-light-red: #feeeee;
 }
 
 .hover-utility {
   @apply duration-300 ease-in-out transition-all
+}
+
+.custom-toast {
+  @apply max-w-xs right-4 bottom-4 h-12;
+}
+
+@media (min-width: 640px) {
+
+  /* sm and up */
+  .custom-toast {
+    @apply w-full max-w-full left-0 right-0 bottom-0 rounded-xl;
+  }
 }
